Several fixes and renaming files