@@ -1,11 +1,11 @@
 package br.com.home.lab.softwaretesting.service;
 
 import br.com.home.lab.softwaretesting.controller.record.FormSearch;
-import br.com.home.lab.softwaretesting.controller.record.ResultadoRecord;
+import br.com.home.lab.softwaretesting.controller.record.ResultRecord;
 import br.com.home.lab.softwaretesting.controller.record.TotalLancamentoCategoriaRecord;
 import br.com.home.lab.softwaretesting.controller.record.TotalLancamentoRecord;
 import br.com.home.lab.softwaretesting.converter.StringToMoneyConverter;
-import br.com.home.lab.softwaretesting.model.Categoria;
+import br.com.home.lab.softwaretesting.model.Category;
 import br.com.home.lab.softwaretesting.model.Lancamento;
 import br.com.home.lab.softwaretesting.model.TipoLancamento;
 import br.com.home.lab.softwaretesting.repository.LancamentoRepository;
@@ -30,11 +30,10 @@ import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static br.com.home.lab.softwaretesting.model.Lancamento.CURRENT_MONTH_CLAUSE;
-import static br.com.home.lab.softwaretesting.service.LancamentoService.MAXIMO_LANCAMENTOS;
+import static br.com.home.lab.softwaretesting.service.EntryService.MAXIMO_LANCAMENTOS;
 import static br.com.home.lab.softwaretesting.util.LancamentoGen.novaDespesa;
 import static br.com.home.lab.softwaretesting.util.LancamentoGen.novaRenda;
 import static org.assertj.core.api.Assertions.assertThat;
@@ -44,11 +43,11 @@ import static org.mockito.Mockito.*;
 import static org.testng.Assert.assertEquals;
 
 @SpringBootTest
-public class LancamentoServiceTest extends AbstractTransactionalTestNGSpringContextTests {
+public class EntryServiceTest extends AbstractTransactionalTestNGSpringContextTests {
 
     @Spy
     @InjectMocks
-    private LancamentoService lancamentoService;
+    private EntryService entryService;
 
     @Mock
     private LancamentoRepository lancamentoRepository;
@@ -64,11 +63,11 @@ public class LancamentoServiceTest extends AbstractTransactionalTestNGSpringCont
     }
 
     @Test
-    public void salvarTest(){
+    public void saveTest(){
         given(lancamentoRepository.save(any(Lancamento.class)))
                 .willReturn(new Lancamento());
 
-        lancamentoService.salvar(new Lancamento());
+        entryService.save(new Lancamento());
 
         verify(lancamentoRepository, times(1))
                 .save(any(Lancamento.class));
@@ -82,11 +81,11 @@ public class LancamentoServiceTest extends AbstractTransactionalTestNGSpringCont
                 .comDescricao(DataGen.productName())
                 .comDataLancamento(DataGen.date())
                 .comValor(DataGen.moneyValue())
-                .comCategoria(Categoria.WAGE)
+                .comCategoria(Category.WAGE)
                 .build();
 
         when(lancamentoRepository.getById(id)).thenReturn(lancamento);
-        lancamentoService.remover(id);
+        entryService.remover(id);
 
         verify(lancamentoRepository, times(1))
                 .getById(anyLong());
@@ -96,7 +95,7 @@ public class LancamentoServiceTest extends AbstractTransactionalTestNGSpringCont
 
     @Test(dataProvider = "lancamentos")
     public void getTotalSaidaTest(List<Lancamento> lancamentos, BigDecimal totalSaidaEsperado){
-        BigDecimal totalObtido = lancamentoService.getTotalDespesa(lancamentos);
+        BigDecimal totalObtido = entryService.getTotalDespesa(lancamentos);
         assertThat(totalObtido).isEqualTo(totalSaidaEsperado);
     }
 
@@ -106,44 +105,44 @@ public class LancamentoServiceTest extends AbstractTransactionalTestNGSpringCont
                 .comTipo(TipoLancamento.INCOME)
                 .comDescricao(DataGen.productName())
                 .comDataLancamento(DataGen.date())
-                .comCategoria(Categoria.WAGE)
+                .comCategoria(Category.WAGE)
                 .build());
 
-        when(lancamentoService.somaValoresPorTipo(lancamentos, TipoLancamento.INCOME)).thenCallRealMethod();
-        when(lancamentoService.getTotalRenda(lancamentos)).thenCallRealMethod();
-        assertThat(totalEntradaEsperado).isEqualTo(lancamentoService.getTotalRenda(lancamentos));
+        when(entryService.somaValoresPorTipo(lancamentos, TipoLancamento.INCOME)).thenCallRealMethod();
+        when(entryService.getTotalRenda(lancamentos)).thenCallRealMethod();
+        assertThat(totalEntradaEsperado).isEqualTo(entryService.getTotalRenda(lancamentos));
     }
 
     @Test
     public void getPaginasTest(){
-        when(lancamentoService.calculaNumeroPaginas(anyInt())).thenCallRealMethod();
-        when(lancamentoService.getPaginas(anyInt())).thenCallRealMethod();
+        when(entryService.calculaNumeroPaginas(anyInt())).thenCallRealMethod();
+        when(entryService.getPaginas(anyInt())).thenCallRealMethod();
         int totalRegistros = DataGen.number(5, 50);
-        int numeroPaginas = lancamentoService.calculaNumeroPaginas(totalRegistros);
-        var list = lancamentoService.getPaginas(totalRegistros);
+        int numeroPaginas = entryService.calculaNumeroPaginas(totalRegistros);
+        var list = entryService.getPaginas(totalRegistros);
 
         assertThat(list)
                 .isEqualTo(IntStream.rangeClosed(1, numeroPaginas)
-                        .boxed().collect(Collectors.toList()));
+                        .boxed().toList());
     }
 
     @Test(dataProvider = "entriesAndPages")
     public void calculaNumeroPaginasTest(int totalRegistos, int totalPaginas){
-        assertThat(lancamentoService.calculaNumeroPaginas(totalRegistos)).isEqualTo(totalPaginas);
+        assertThat(entryService.calculaNumeroPaginas(totalRegistos)).isEqualTo(totalPaginas);
     }
 
     @Test
     public void calculaNumeroPaginasNegativeCaseTest(){
-        assertThat(lancamentoService.calculaNumeroPaginas(500)).isNotEqualTo(5);
+        assertThat(entryService.calculaNumeroPaginas(500)).isNotEqualTo(5);
     }
 
 
     @Test
     public void calculaPrimeiroRegistroPorPaginaTest(){
-        assertThat(lancamentoService.calculaPrimeiroRegistroPorPagina(0)).isZero();
+        assertThat(entryService.calculaPrimeiroRegistroPorPagina(0)).isZero();
         int pages = 10;
         IntStream.rangeClosed(1, pages).forEach(i ->
-                assertThat(lancamentoService.calculaPrimeiroRegistroPorPagina(i))
+                assertThat(entryService.calculaPrimeiroRegistroPorPagina(i))
                         .isEqualTo((i-1) * MAXIMO_LANCAMENTOS)
         );
     }
@@ -152,8 +151,8 @@ public class LancamentoServiceTest extends AbstractTransactionalTestNGSpringCont
     public void buscaPorIdInexistenteTest(){
         Long id = 10L;
         when(lancamentoRepository.findById(id)).thenReturn(Optional.empty());
-        when(lancamentoService.buscaPorId(id)).thenThrow(new IllegalStateException("Deveria ter o Lancamento pelo id: " + id));
-        lancamentoService.buscaPorId(id);
+        when(entryService.searchById(id)).thenThrow(new IllegalStateException("Deveria ter o Lancamento pelo id: " + id));
+        entryService.searchById(id);
     }
 
     @Test
@@ -170,11 +169,11 @@ public class LancamentoServiceTest extends AbstractTransactionalTestNGSpringCont
     public void contaCurrentMonthTest(){
         String itemBusca = "searchItem";
         long countValue = 10L;
-        when(LancamentoService.getCountSql(itemBusca) + " and " + CURRENT_MONTH_CLAUSE).thenCallRealMethod();
-        String sql = LancamentoService.getCountSql(itemBusca) + " and " + CURRENT_MONTH_CLAUSE;
+        when(EntryService.getCountSql(itemBusca) + " and " + CURRENT_MONTH_CLAUSE).thenCallRealMethod();
+        String sql = EntryService.getCountSql(itemBusca) + " and " + CURRENT_MONTH_CLAUSE;
         when(entityManager.createQuery(sql, Long.class)).thenReturn(query);
         when(query.getSingleResult()).thenReturn(countValue);
-        assertThat(lancamentoService.contaCurrentMonth(itemBusca)).isEqualTo(countValue);
+        assertThat(entryService.contaCurrentMonth(itemBusca)).isEqualTo(countValue);
     }
 
     @Test(dataProvider = "lancamentos")
@@ -182,10 +181,10 @@ public class LancamentoServiceTest extends AbstractTransactionalTestNGSpringCont
     public void buscaTodosTest(List<Lancamento> lancamentos){
         int page = 3;
         when(entityManager.createNamedQuery("lancamento.maisRecentes", Lancamento.class)).thenReturn(query);
-        when(query.setFirstResult(lancamentoService.calculaPrimeiroRegistroPorPagina(page))).thenReturn(query);
+        when(query.setFirstResult(entryService.calculaPrimeiroRegistroPorPagina(page))).thenReturn(query);
         when(query.setMaxResults(MAXIMO_LANCAMENTOS).getResultList()).thenReturn(lancamentos);
 
-        assertThat(lancamentoService.buscaTodosMesCorrente(page)).hasSameSizeAs(lancamentos);
+        assertThat(entryService.buscaTodosMesCorrente(page)).hasSameSizeAs(lancamentos);
         verify(entityManager, times(1)).createNamedQuery("lancamento.maisRecentes", Lancamento.class);
     }
 
@@ -194,9 +193,9 @@ public class LancamentoServiceTest extends AbstractTransactionalTestNGSpringCont
         int pagina = 3;
         String itemBusca = "searchItem";
         mockQueryToBuscaTodosMeses(lancamentos, itemBusca, pagina);
-        var result = lancamentoService.buscaTodosBySearching(pagina, itemBusca);
+        var result = entryService.buscaTodosBySearching(pagina, itemBusca);
         assertThat(lancamentos).hasSameSizeAs(result);
-        verify(lancamentoService).buscaTodosBySearching(pagina, itemBusca);
+        verify(entryService).buscaTodosBySearching(pagina, itemBusca);
     }
 
     @Test(dataProvider = "lancamentos")
@@ -205,7 +204,7 @@ public class LancamentoServiceTest extends AbstractTransactionalTestNGSpringCont
         when(entityManager.createNamedQuery("lancamento.byDataLancamento", Lancamento.class)).thenReturn(query);
         when(query.setMaxResults(MAXIMO_LANCAMENTOS).getResultList()).thenReturn(lancamentos);
 
-        assertThat(lancamentoService.buscaTodosOrderingByDataLancamento()).hasSameSizeAs(lancamentos);
+        assertThat(entryService.buscaTodosOrderingByDataLancamento()).hasSameSizeAs(lancamentos);
         verify(entityManager, times(1)).createNamedQuery("lancamento.byDataLancamento", Lancamento.class);
     }
 
@@ -214,16 +213,16 @@ public class LancamentoServiceTest extends AbstractTransactionalTestNGSpringCont
         String itemBusca = "searchItem";
         mockQueryToBuscaTodosMesCorrente(lancamentos, itemBusca);
 
-        when(lancamentoService.buscaTodosMesCorrente(1, itemBusca)).thenReturn(lancamentos);
-        assertThat(lancamentoService.buscaTodosMesCorrente(1, itemBusca)).hasSameSizeAs(lancamentos);
+        when(entryService.buscaTodosMesCorrente(1, itemBusca)).thenReturn(lancamentos);
+        assertThat(entryService.buscaTodosMesCorrente(1, itemBusca)).hasSameSizeAs(lancamentos);
     }
 
     @Test
     @SuppressWarnings("unchecked")
     public void contaTodosLancamentosTest(){
-        when(entityManager.createQuery(LancamentoService.getCountSql(null), Long.class)).thenReturn(query);
+        when(entityManager.createQuery(EntryService.getCountSql(null), Long.class)).thenReturn(query);
         when(query.getSingleResult()).thenReturn(12L);
-        lancamentoService.conta(null);
+        entryService.conta(null);
     }
 
     @Test
@@ -232,7 +231,7 @@ public class LancamentoServiceTest extends AbstractTransactionalTestNGSpringCont
         long totalRegistros = 12L;
         mockToCount(itemBusca, totalRegistros);
 
-        lancamentoService.conta(itemBusca);
+        entryService.conta(itemBusca);
     }
 
     private void mockQueryToBuscaTodosMesCorrente(List<Lancamento> lancamentos, String itemBusca){
@@ -241,13 +240,13 @@ public class LancamentoServiceTest extends AbstractTransactionalTestNGSpringCont
         when(query.setFirstResult(anyInt())).thenReturn(query);
         when(query.setMaxResults(MAXIMO_LANCAMENTOS)).thenReturn(query);
         when(query.getResultList()).thenReturn(lancamentos);
-        when(lancamentoService.buscaTodosMesCorrente(1, itemBusca)).thenReturn(lancamentos);
+        when(entryService.buscaTodosMesCorrente(1, itemBusca)).thenReturn(lancamentos);
     }
 
     private void mockQueryToBuscaTodosMeses(List<Lancamento> lancamentos, String itemBusca, int pagina){
         when(entityManager.createNamedQuery("lancamento.BySearching", Lancamento.class)).thenReturn(query);
         when(query.setParameter("searchItem", "%" + itemBusca + "%")).thenReturn(query);
-        when(query.setFirstResult(lancamentoService.calculaPrimeiroRegistroPorPagina(pagina))).thenReturn(query);
+        when(query.setFirstResult(entryService.calculaPrimeiroRegistroPorPagina(pagina))).thenReturn(query);
         when(query.setMaxResults(MAXIMO_LANCAMENTOS).getResultList()).thenReturn(lancamentos);
     }
 
@@ -256,8 +255,8 @@ public class LancamentoServiceTest extends AbstractTransactionalTestNGSpringCont
         when(entityManager.createNamedQuery("lancamento.soma.por.tipolancamento", BigDecimal.class)).thenReturn(query);
         when(query.setParameter("tipoLancamento", TipoLancamento.EXPENSE)).thenReturn(query);
         when(query.getSingleResult()).thenReturn(totalGeral);
-        when(lancamentoService.calculaTotalPorTipoLancamento(TipoLancamento.EXPENSE)).thenReturn(totalGeral);
-        when(lancamentoService.calculaTotalGeralDespesa()).thenReturn(totalGeral);
+        when(entryService.calculaTotalPorTipoLancamento(TipoLancamento.EXPENSE)).thenReturn(totalGeral);
+        when(entryService.calculaTotalGeralDespesa()).thenReturn(totalGeral);
     }
 
     @SuppressWarnings("unchecked")
@@ -265,21 +264,21 @@ public class LancamentoServiceTest extends AbstractTransactionalTestNGSpringCont
         when(entityManager.createNamedQuery("lancamento.soma.por.tipolancamento", BigDecimal.class)).thenReturn(query);
         when(query.setParameter("tipoLancamento", TipoLancamento.INCOME)).thenReturn(query);
         when(query.getSingleResult()).thenReturn(totalGeralEntrada);
-        when(lancamentoService.calculaTotalPorTipoLancamento(TipoLancamento.INCOME)).thenReturn(totalGeralEntrada);
-        when(lancamentoService.calculaTotalGeralRenda()).thenReturn(totalGeralEntrada);
-        assertThat(lancamentoService.calculaTotalGeralRenda()).isEqualTo(totalGeralEntrada);
+        when(entryService.calculaTotalPorTipoLancamento(TipoLancamento.INCOME)).thenReturn(totalGeralEntrada);
+        when(entryService.calculaTotalGeralRenda()).thenReturn(totalGeralEntrada);
+        assertThat(entryService.calculaTotalGeralRenda()).isEqualTo(totalGeralEntrada);
     }
 
     @Test(dataProvider = "lancamentos")
-    public void buscaAjaxTestMesCorrente(List<Lancamento> lancamentos, final BigDecimal totalSaida, final BigDecimal totalEntrada){
-        FormSearch formSearch = new FormSearch("searchItem", true);
+    public void ajaxSearchTestMesCorrente(List<Lancamento> lancamentos, final BigDecimal totalSaida, final BigDecimal totalEntrada){
+        FormSearch formSearch = new FormSearch("searchItem", true, 1);
         mockQueryToBuscaTodosMesCorrente(lancamentos, formSearch.searchItem());
-        buscaAjax(formSearch, lancamentos, totalSaida, totalEntrada);
+        ajaxSearch(formSearch, lancamentos, totalSaida, totalEntrada);
     }
 
     @Test(dataProvider = "lancamentos")
-    public void buscaAjaxTestTodosMeses(List<Lancamento> lancamentos, final BigDecimal totalSaida, final BigDecimal totalEntrada){
-        FormSearch formSearch = new FormSearch("searchItem", false);
+    public void ajaxSearchTestTodosMeses(List<Lancamento> lancamentos, final BigDecimal totalSaida, final BigDecimal totalEntrada){
+        FormSearch formSearch = new FormSearch("searchItem", false, 1);
         lancamentos.add(LancamentoGen.builder()
                 .comTipo(TipoLancamento.INCOME)
                 .comDescricao(DataGen.productName())
@@ -287,17 +286,17 @@ public class LancamentoServiceTest extends AbstractTransactionalTestNGSpringCont
                 .comValor(DataGen.moneyValue())
                 .build());
         mockQueryToBuscaTodosMeses(lancamentos, formSearch.searchItem(), 1);
-        buscaAjax(formSearch, lancamentos, totalSaida, totalEntrada);
+        ajaxSearch(formSearch, lancamentos, totalSaida, totalEntrada);
     }
 
-    private void buscaAjax(FormSearch formSearch, List<Lancamento> lancamentos, final BigDecimal totalSaida, final BigDecimal totalEntrada){
+    private void ajaxSearch(FormSearch formSearch, List<Lancamento> lancamentos, final BigDecimal totalSaida, final BigDecimal totalEntrada){
         String itemBusca = formSearch.searchItem();
         long totalRegistros = 123L;
         mockToCount(formSearch.searchItem(), totalRegistros);
 
         var resultBuscaTodos = formSearch.searchOnlyCurrentMonth() ?
-                lancamentoService.buscaTodosMesCorrente(1, formSearch.searchItem())
-                : lancamentoService.buscaTodosBySearching(1, itemBusca);
+                entryService.buscaTodosMesCorrente(1, formSearch.searchItem())
+                : entryService.buscaTodosBySearching(1, itemBusca);
 
         assertThat(resultBuscaTodos).hasSameSizeAs(lancamentos);
 
@@ -307,13 +306,13 @@ public class LancamentoServiceTest extends AbstractTransactionalTestNGSpringCont
         mockCalculaTotalGeralRenda(totalGeralEntrada);
 
         StringToMoneyConverter converter = new StringToMoneyConverter();
-        doCallRealMethod().when(lancamentoService).getResultado(lancamentos, totalRegistros, itemBusca);
-        ResultadoRecord resultado = lancamentoService.getResultado(lancamentos, totalRegistros, itemBusca);
-        assertEquals(converter.convert(resultado.totalGeralEntrada()), totalGeralEntrada.setScale(2, RoundingMode.HALF_UP));
-        assertThat(resultado.lancamentos()).hasSameSizeAs(lancamentos);
-        assertThat(resultado.totalRegistros()).isEqualTo(totalRegistros);
-        when(lancamentoService.buscaAjax(formSearch)).thenReturn(resultado);
-        lancamentoService.buscaAjax(formSearch);
+        doCallRealMethod().when(entryService).getResultado(lancamentos, totalRegistros, itemBusca, 1);
+        ResultRecord resultado = entryService.getResultado(lancamentos, totalRegistros, itemBusca, 1);
+        assertEquals(converter.convert(resultado.grandTotalWinnings()), totalGeralEntrada.setScale(2, RoundingMode.HALF_UP));
+        assertThat(resultado.entries()).hasSameSizeAs(lancamentos);
+        assertThat(resultado.totalRecords()).isEqualTo(totalRegistros);
+        when(entryService.ajaxSearch(formSearch)).thenReturn(resultado);
+        entryService.ajaxSearch(formSearch);
     }
 
     @Test(dataProvider = "lancamentos")
@@ -328,9 +327,9 @@ public class LancamentoServiceTest extends AbstractTransactionalTestNGSpringCont
         when(query.setParameter("dataFinal", dataFinal)).thenReturn(query);
         when(query.getResultList()).thenReturn(list);
 
-        when(lancamentoService.getTotalPorPeriodo(dataInicial, dataFinal)).thenReturn(list);
+        when(entryService.getTotalPorPeriodo(dataInicial, dataFinal)).thenReturn(list);
 
-        List<TotalLancamentoRecord> result = lancamentoService.getTotalPorPeriodo(dataInicial, dataFinal);
+        List<TotalLancamentoRecord> result = entryService.getTotalPorPeriodo(dataInicial, dataFinal);
         assertThat(result).hasSameSizeAs(list);
 
         assertThat(result)
@@ -351,8 +350,8 @@ public class LancamentoServiceTest extends AbstractTransactionalTestNGSpringCont
         when(query.setParameter("dataFinal", dataFinal)).thenReturn(query);
         when(query.getSingleResult()).thenReturn(list);
 
-        when(lancamentoService.getTotalPorPeriodoPorCategoria(dataInicial, dataFinal)).thenReturn(list);
-        List<TotalLancamentoCategoriaRecord> result = lancamentoService.getTotalPorPeriodoPorCategoria(dataInicial, dataFinal);
+        when(entryService.getTotalPorPeriodoPorCategoria(dataInicial, dataFinal)).thenReturn(list);
+        List<TotalLancamentoCategoriaRecord> result = entryService.getTotalPorPeriodoPorCategoria(dataInicial, dataFinal);
         assertThat(result).hasSameSizeAs(list);
         assertThat(result)
                 .filteredOn(l -> l.tipo() == TipoLancamento.EXPENSE)
@@ -365,16 +364,16 @@ public class LancamentoServiceTest extends AbstractTransactionalTestNGSpringCont
     @Test
     public void truncateTableTest(){
         doNothing().when(lancamentoRepository).truncateTable();
-        lancamentoService.truncateTable();
+        entryService.truncateTable();
         verify(lancamentoRepository).truncateTable();
     }
 
     @SuppressWarnings("unchecked")
     private void mockToCount(String itemBusca, long totalRegistros){
-        TypedQuery<Long> query = mock(TypedQuery.class);
-        when(entityManager.createQuery(LancamentoService.getCountSql(itemBusca), Long.class)).thenReturn(query);
-        when(query.getSingleResult()).thenReturn(totalRegistros);
-        when(lancamentoService.conta(itemBusca)).thenReturn(totalRegistros);
+        TypedQuery<Long> longTypedQuery = mock(TypedQuery.class);
+        when(entityManager.createQuery(EntryService.getCountSql(itemBusca), Long.class)).thenReturn(longTypedQuery);
+        when(longTypedQuery.getSingleResult()).thenReturn(totalRegistros);
+        when(entryService.conta(itemBusca)).thenReturn(totalRegistros);
     }
 
 
@@ -402,7 +401,7 @@ public class LancamentoServiceTest extends AbstractTransactionalTestNGSpringCont
             }
             case "getTotalPorCategoriaTest" -> {
                 List<TotalLancamentoCategoriaRecord> listTotalLancamentoCategoria = new ArrayList<>();
-                var categorias = Categoria.values();
+                var categorias = Category.values();
                 for (int i = 0; i < size; i++) {
                     var tipo = (i % 3 == 0) ? TipoLancamento.INCOME : TipoLancamento.EXPENSE;
                     int indice = DataGen.number(0, categorias.length - 1);
